# setup-python-uv-stack

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_math.py
